Fixed bugs, Added one button.

--- a/app/src/main/res/layout/activity_reminder_setup.xml
+++ b/app/src/main/res/layout/activity_reminder_setup.xml
@@ -7,7 +7,7 @@
     tools:context=".ReminderSetup">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/reminderName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -21,9 +21,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="13dp"
+        android:lineSpacingExtra="14sp"
+        android:text="@string/reminder_settings"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reminderName" />
+
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="368dp"
-        android:layout_height="178dp"
+        android:layout_height="147dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -33,7 +51,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.145">
+        app:layout_constraintVertical_bias="0.249">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,21 +60,8 @@
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="54dp">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:lineSpacingExtra="14sp"
-                android:text="@string/reminder_settings"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                tools:layout_editor_absoluteX="149dp"
-                tools:layout_editor_absoluteY="67dp" />
-
             <EditText
-                android:id="@+id/editText4"
+                android:id="@+id/reminderDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -64,13 +69,13 @@
                 android:inputType="textMultiLine" />
 
             <CheckBox
-                android:id="@+id/checkBox2"
+                android:id="@+id/timeBased"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/time_based" />
 
             <CheckBox
-                android:id="@+id/checkBox3"
+                android:id="@+id/locationBased"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/location_based" />
@@ -83,12 +88,24 @@
                 android:visibility="visible" />
 
             <CheckBox
-                android:id="@+id/checkBox"
+                android:id="@+id/collab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/share" />
+                android:text="@string/share"
+                tools:layout_editor_absoluteX="170dp"
+                tools:layout_editor_absoluteY="239dp" />
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/finish"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
