--- a/app/src/main/res/layout/activity_reminder_setup.xml
+++ b/app/src/main/res/layout/activity_reminder_setup.xml
@@ -114,10 +114,11 @@
                 android:layout_height="wrap_content"
                 android:text="@string/location_based" />
 
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/mapView"
-                android:layout_width="match_parent"
-                android:layout_height="277dp" />
+            <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
+                <!--android:id="@+id/map"-->
+                <!--android:name="com.google.android.gms.maps.MapFragment"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="302dp" />-->
 
             <View
                 android:id="@+id/divider2"
