--- a/app/src/main/res/layout/activity_reminder_setup.xml
+++ b/app/src/main/res/layout/activity_reminder_setup.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
