--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="year">#999999</color>
+    <color name="description">#999999</color>
     <color name="title">#222222</color>
     <color name="red">#ffff0000</color>
     <color name="white">#ffffff</color>
+    <color name="googleBlue">#4581fd</color>
 </resources>
