--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="red">#ffff0000</color>
     <color name="white">#ffffff</color>
     <color name="googleBlue">#4581fd</color>
+    <color name="orange">#fe583a</color>
 </resources>
