--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#ffffff</color>
     <color name="googleBlue">#4581fd</color>
     <color name="orange">#fe583a</color>
+    <color name="black">#000000</color>
 </resources>
