--- a/app/src/main/res/layout/reminder_list_row.xml
+++ b/app/src/main/res/layout/reminder_list_row.xml
@@ -45,11 +45,13 @@
                 android:textStyle="italic" />
 
         <!--<TextView-->
-        <!--android:id="@+id/year"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:textColor="@color/year" />-->
+            <!--android:id="@+id/locationName"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@id/title_container"-->
+            <!--android:textColor="@color/description"-->
+            <!--android:textSize="13sp"-->
+            <!--android:textStyle="italic" />-->
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
