--- a/app/src/main/res/layout/reminder_list_row.xml
+++ b/app/src/main/res/layout/reminder_list_row.xml
@@ -3,54 +3,73 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
     card_view:cardCornerRadius="6dp"
     android:layout_margin="6dp"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    card_view:cardBackgroundColor="@color/evenIndexColor">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="?android:attr/selectableItemBackground"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/row_padding_vertical"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/row_padding_vertical">
+        android:orientation="horizontal"
+        android:padding="25dp">
         <LinearLayout
             android:id = "@+id/title_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/googleBlue">
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight=".6">
+
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:layout_alignParentTop="true"
-                android:textColor="@color/title"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textAlignment="center" />
-        </LinearLayout>
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold"/>
+
             <TextView
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/title_container"
                 android:textColor="@color/description"
                 android:textSize="13sp"
                 android:textStyle="italic" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/locationName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/title_container"
-            android:textColor="@color/locationName"
-            android:textSize="13sp"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight=".4">
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/icon"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:src="@mipmap/location_icon"
+                android:layout_gravity="right"/>
+
+            <TextView
+                android:id="@+id/locationName"
+                android:layout_width="match_parent"
+                android:layout_height="33dp"
+                android:textColor="@color/white"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/alertTime"
+                android:layout_width="match_parent"
+                android:layout_height="33dp"
+                android:textColor="@color/white"
+                android:textSize="13sp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 </android.support.v7.widget.CardView>
