--- a/app/src/main/res/layout/reminder_list_row.xml
+++ b/app/src/main/res/layout/reminder_list_row.xml
@@ -48,12 +48,28 @@
             android:orientation="vertical"
             android:layout_weight=".4">
 
-            <ImageView
-                android:id="@+id/icon"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:src="@mipmap/location_icon"
-                android:layout_gravity="right"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/timeIcon"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_gravity="start"
+                    android:src="@mipmap/time_icon"
+                    android:visibility="invisible"/>
+
+                <ImageView
+                    android:id="@+id/locationIcon"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:src="@mipmap/location_icon"
+                    android:layout_gravity="end"
+                    android:visibility="invisible"/>
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/locationName"
