--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#ff4081</color>
     <color name="description">#f7f7f7</color>
     <color name="title">#222222</color>
-    <color name="red">#ffff0000</color>
+    <color name="red">#ff0000</color>
     <color name="white">#fffeff</color>
     <color name="googleBlue">#4581fd</color>
     <color name="orange">#fe583a</color>
@@ -14,4 +14,5 @@
     <color name="oddIndexColor">#9799d1</color>
     <color name="evenIndexColor">#fcc100</color>
     <color name="backgroundColor">#1c1a1c</color>
+    <color name="gray">#afafaf</color>
 </resources>
